--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -1,3 +1,6 @@
+#admin의 템플릿을 바꾸는 부분 
+
+
 {% extends "admin/base.html" %}
 
 {% block title %}{{ title }} | {{ site_title|default:_('Django site admin') }}{% endblock %}
